--- a/login.html
+++ b/login.html
@@ -76,9 +76,8 @@
                     <h1>Welcome Back</h1>
                     <p>Sign in to your ESC Fit Club account</p>
                 </div>
-                <div id="error-message" class="error-message" style="display: none; color: #721c24; background-color: #f8d7da; padding: 10px; border: 1px solid #f5c6cb; border-radius: 4px; margin-bottom: 15px;"></div>
-                <div id="success-message" class="success-message" style="display: none; color: #155724; background-color: #d4edda; padding: 10px; border: 1px solid #c3e6cb; border-radius: 4px; margin-bottom: 15px;"></div>
-                <form class="auth-form" id="login-form">
+                <div id="errorMessage" class="error-message" style="display: none; color: red; margin-bottom: 10px;"></div>
+                <form class="auth-form" id="loginForm">
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="email" id="email" required>
@@ -104,6 +103,6 @@
     </section>
 
     <script src="shared.js"></script>
-    <script src="auth.js"></script>
+    <script type="module" src="auth.js"></script>
 </body>
 </html> 
